# promotion-gauger

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  seed_demo.py
.streamlit/: secrets.toml.example
data/: promo_monitors.json  sample_mentions.jsonl
src/promotion_gauger/: __init__.py  config.py  evaluate.py  finetune.py  ingest.py  pipeline.py  reviews.py  sentiment.py  storage.py  synthetic.py
